Revise project title, authors, and abstract content
Updated the title, authors, institution, and abstract in index.html to reflect the actual project details.

--- a/index.html
+++ b/index.html
@@ -241,23 +241,27 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">Integrating Walkability Maps for Fall-Preventive Social Navigation</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Xiangrui Wang</a>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Nathaniel Pearson</a>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                    <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Boyi Hu</a>,</span>
+                    <span class="author-block">
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Yu Gu</a>
+                    
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Institution Name<br>Conference name and year</span>
+                    <!-- <span class="author-block">Institution Name<br>Conference name and year</span> -->
+                    <span class="author-block">Interactive Robotics Laboratory, West Virginia University</span>
                     <!-- TODO: Remove this line if no equal contribution -->
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
                   <div class="column has-text-centered">
@@ -274,7 +278,7 @@
                     </span>
 
                     <!-- TODO: Add your supplementary material PDF or remove this section -->
-                    <span class="link-block">
+                    <!-- <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -282,7 +286,7 @@
                       </span>
                       <span>Supplementary</span>
                     </a>
-                  </span>
+                  </span> -->
 
                   <!-- TODO: Replace with your GitHub repository URL -->
                   <span class="link-block">
@@ -341,7 +345,7 @@
         <div class="content has-text-justified">
           <!-- TODO: Replace with your paper abstract -->
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            Falls are a major accident risk in retail stores, where customers often overlook floor hazards. While robots are commonly used for logistics and inventory management, their role in enhancing pedestrian safety remains limited. To address this gap, we integrate a walkability map, which assigns a score reflecting floor slipperiness to each area, into the robot's path planning. This enables the robot to perceive potential environmental hazards. By combining this walkability information with real-time pedestrian trajectory prediction, we enable robots to perform walkability-aware social navigation. Specifically, our approach employs Monte Carlo Tree Search (MCTS) for online planning, which allows the robot to plan paths that can enhance human safety while keeping social compliance. We utilize MCTS's look-ahead capability by embedding the predicted future walkability scores into the reward function during the rollout process. This approach pushes the robot to select near-optimal actions that provide implicit guidance, thus guiding people away from low-walkability areas. Experiments in both simulation and real-world testing show improvement in pedestrian safety while maintaining real-time operational efficiency.
           </p>
         </div>
       </div>
