Integrate MathJax and add image carousel section
Added MathJax script for rendering LaTeX and included a new image carousel section with a research result visualization.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
   <link rel="preconnect" href="https://documentcloud.adobe.com">
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
+  <script>
+  window.MathJax = {
+    tex: { inlineMath: [['$', '$'], ['\\(', '\\)']] },
+    svg: { fontCache: 'global' }
+  };
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+
 
   <!-- TODO: Replace with your paper title and authors -->
   <title>PAPER_TITLE - AUTHOR_NAMES | Academic Research</title>
@@ -319,7 +327,7 @@
 
 
 <!-- Teaser video-->
-<section class="hero teaser">
+<!-- <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <!-- TODO: Replace with your teaser video -->
@@ -333,8 +341,23 @@
       </h2>
     </div>
   </div>
-</section>
+</section> -->
 <!-- End teaser video -->
+
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item">
+          <img src="static/images/carousel1.jpg" alt="Research result visualization" loading="lazy"/>
+          <h2 class="subtitle has-text-centered">
+            Image description (optional).
+          </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -356,7 +379,7 @@
 
 
 <!-- Image carousel -->
-<section class="hero is-small">
+<!-- <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
@@ -392,8 +415,24 @@
   </div>
 </div>
 </div>
-</section>
+</section> -->
 <!-- End image carousel -->
+
+<!-- Overview -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item">
+          <img src="static/images/carousel1.jpg" alt="Research result visualization" loading="lazy"/>
+          <h2 class="subtitle has-text-centered">
+            System overview. The SocialGAT provides baseline ($\mathbf{x}_{h_t}, \mathbf{y}_{h_t}$) and the influenced trajectory is ($\mathbf{x}'_{h_t}, \mathbf{y}'_{h_t}$).
+          </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
