Replace carousel images and clean up HTML
Updated carousel images and descriptions, removed unused video sections.

--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item">
-          <img src="static/images/carousel1.jpg" alt="Research result visualization" loading="lazy"/>
+          <img src="static/images/visualabstract.png" alt="Research result visualization" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
-            Image description (optional).
+            Walkability-aware social navigation. To reduce human fall risks, the robot utilizes its knowledge of the walkability map to guide pedestrians away from slippery areas. The planned robot walkability-aware trajectory shifts the pedestrian's path from their baseline trajectory in slippery areas (Orange) to the influenced trajectory, ensuring movement through safe, high-walkability regions (Green).
           </h2>
         </div>
       </div>
@@ -364,7 +364,7 @@
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item">
-          <img src="static/images/carousel1.jpg" alt="Research result visualization" loading="lazy"/>
+          <img src="static/images/overview.png" alt="Research result visualization" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
             System overview. The SocialGAT provides baseline ($\mathbf{x}_{h_t}, \mathbf{y}_{h_t}$) and the influenced trajectory is ($\mathbf{x}'_{h_t}, \mathbf{y}'_{h_t}$).
           </h2>
@@ -373,24 +373,6 @@
     </div>
   </div>
 </section>
-
-<!-- Teaser video-->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <!-- TODO: Replace with your teaser video -->
-      <video poster="" id="tree" autoplay controls muted loop height="100%" preload="metadata">
-        <!-- TODO: Add your video file path here -->
-        <source src="static/videos/banner_video.mp4" type="video/mp4">
-      </video>
-      <!-- TODO: Replace with your video description -->
-      <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
-      </h2>
-    </div>
-  </div>
-</section>
-<!-- End teaser video -->
 
 
 
@@ -414,61 +396,6 @@
   </div>
 </section>
 <!-- End youtube video -->
-
-
-<!-- Video carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <!-- TODO: Add poster image for better preview -->
-          <video poster="" id="video1" controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <!-- TODO: Add poster image for better preview -->
-          <video poster="" id="video2" controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <!-- TODO: Add poster image for better preview -->
-          <video poster="" id="video3" controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End video carousel -->
-
-
-
-
-
-
-<!-- Paper poster -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <!-- TODO: Replace with your poster PDF -->
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
-        
-      </div>
-    </div>
-  </section>
-<!--End paper poster -->
-
 
 
 <!--BibTex citation -->
