--- a/index.html
+++ b/index.html
@@ -340,6 +340,23 @@
   </div>
 </section>
 
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item">
+          <img class="responsive-img"
+               src="static/images/visualabstract.png"
+               alt="Research result visualization" loading="lazy" />
+          <h2 class="subtitle has-text-centered">
+            Walkability-aware social navigation. To reduce human fall risks, the robot utilizes its knowledge of the walkability map to guide pedestrians away from slippery areas. The planned robot walkability-aware trajectory shifts the pedestrian's path from their baseline trajectory in slippery areas (Orange) to the influenced trajectory, ensuring movement through safe, high-walkability regions (Green).
+          </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
@@ -366,7 +383,7 @@
         <div class="item">
           <img src="static/images/overview.png" alt="Research result visualization" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
-            System overview. The SocialGAT provides baseline ($\mathbf{x}_{h_t}, \mathbf{y}_{h_t}$) and the influenced trajectory is ($\mathbf{x}'_{h_t}, \mathbf{y}'_{h_t}$).
+            System overview. The pipeline integrates a SocialGAT Human Trajectory Predictor with an online MCTS Path Planner. The SocialGAT module provides the human baseline trajectory ($\mathbf{x}_{h_t}, \mathbf{y}_{h_t}$), which the Social Force Model uses to dynamically generate the influenced trajectory ($\mathbf{x}'_{h_t}, \mathbf{y}'_{h_t}$) during MCTS simulation. This influence accounts for the human reaction to the robot's simulated position ($\mathbf{x}_{r_t}, \mathbf{y}_{r_t}$) throughout the MCTS lookahead. Path evaluation uses the total reward calculated through a multi-objective reward, considering goal progress, collision avoidance, social comfort, walkability, and efficiency. (CAT: Concatenation; MLP: Multi Layer Perceptron)
           </h2>
         </div>
       </div>
@@ -388,7 +405,7 @@
           
           <div class="publication-video">
             <!-- TODO: Replace with your YouTube video ID -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://youtu.be/1FXr4yx3FxU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
