--- a/index.html
+++ b/index.html
@@ -280,11 +280,26 @@
 
 <!-- visual abstract.png -->
 
-<section class="hero is-small">
+<!-- <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div class="item">
         <img src="static/images/visualabstract.png" alt="Research result visualization" loading="lazy"/>
+        <h2 class="subtitle has-text-centered">
+          Walkability-aware social navigation. To reduce human fall risks, the robot utilizes its knowledge of the walkability map to guide pedestrians away from slippery areas. The planned robot walkability-aware trajectory shifts the pedestrian's path from their baseline trajectory in slippery areas (Orange) to the influenced trajectory, ensuring movement through safe, high-walkability regions (Green).
+        </h2>
+      </div>
+    </div>
+  </div>
+</section> -->
+
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div class="item">
+        <img class="responsive-img"
+             src="static/images/visualabstract.png"
+             alt="Research result visualization" loading="lazy" />
         <h2 class="subtitle has-text-centered">
           Walkability-aware social navigation. To reduce human fall risks, the robot utilizes its knowledge of the walkability map to guide pedestrians away from slippery areas. The planned robot walkability-aware trajectory shifts the pedestrian's path from their baseline trajectory in slippery areas (Orange) to the influenced trajectory, ensuring movement through safe, high-walkability regions (Green).
         </h2>
