Remove commented visual abstract section
Removed commented-out section for visual abstract.

--- a/index.html
+++ b/index.html
@@ -279,8 +279,7 @@
 
 
 <!-- visual abstract.png -->
-
-<!-- <section class="hero is-small">
+<section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div class="item">
@@ -291,7 +290,7 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 <section class="hero is-small">
   <div class="hero-body">
