--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <!-- TODO: Replace with your teaser video -->
-      <video poster="" id="tree" control height="100%" preload="metadata">
+      <video poster="" id="tree" height="100%" preload="metadata">
         <!-- TODO: Add your video file path here -->
         <source src="https://github.com/yepraywong/walkability-mcts/releases/download/v1.0/video_2nd_version.mp4" type="video/mp4">
       </video>
