--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   <div class="hero-body">
     <div class="container">
       <div class="item">
-        <img src="static/images/visualabstract.png" alt="Research result visualization" loading="lazy"/>
+        <img src="static/images/visualabstract.png" alt="Research result visualization" loading="lazy" style="max-width: 70%; height: auto; margin: 0 auto; display: block;"/>
         <h2 class="subtitle has-text-centered">
           Walkability-aware social navigation. To reduce human fall risks, the robot utilizes its knowledge of the walkability map to guide pedestrians away from slippery areas. The planned robot walkability-aware trajectory shifts the pedestrian's path from their baseline trajectory in slippery areas (Orange) to the influenced trajectory, ensuring movement through safe, high-walkability regions (Green).
         </h2>
