Update video source to 3rd version

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
       <!-- TODO: Replace with your teaser video -->
       <video poster="" id="tree" controls height="100%" preload="metadata">
         <!-- TODO: Add your video file path here -->
-        <source src="https://github.com/yepraywong/walkability-mcts/releases/download/v1.0/video_2nd_version.mp4" type="video/mp4">
+        <source src="https://github.com/yepraywong/walkability-mcts/releases/download/v1.0/Video.Presentation.3rd.version.mp4" type="video/mp4">
       </video>
       <!-- TODO: Replace with your video description -->
       <h2 class="subtitle has-text-centered">
